Revision history for Perl extension Net::SSLeay.

??????? 2018-??-??
	- Add SSL_CTX_set_security_level, SSL_CTX_get_security_level,
	  SSL_set_security_level and SSL_get_security_level.
	  Add new test file 65_security_level.t.
	  All courtesy of Damyan Ivanov of Debian project.
	- Add SSL_CTX_sess_set_new_cb and SSL_CTX_sess_set_remove_cb.
	  Add new test file 44_sess.t for these and future session
	  related tests for which no specific test file is needed.
	- Add SSL_get_version, SSL_client_version and SSL_is_dtls.
	- Enhance t/local/43_misc_functions.t get_keyblock_size test
	  to work better with AEAD ciphers.

1.86_05 2018-08-22
	- Net-SSLeay now requires at least Perl 5.8.1. This is a
	  formalisation of what has been the de facto case for some time,
	  as the distribution hasn't compiled and passed its tests on Perl
	  5.005 for several years.
	- Increment Net::SSLeay::Handle's version number to keep it in sync
	  with Net::SSLeay's, thus satisfying Kwalitee's consistent_version
	  metric.
	- Re-enable the d2i_X509_bio() test in t/local/33_x509_create_cert.t
	  for LibreSSL. Thanks to Alexander Bluhm.
	- Automatically detect new library names on Windows for OpenSSL
	  1.1.0 onwards (libcrypto, libssl). Fixes part of RT#121084. Thanks
	  to Jean-Damien Durand.
	- Fix a typo preventing OpenSSL libraries built with the VC compiler
	  (i.e. ones with a ".lib" suffix) from being automatically detected
	  on Windows. Fixes part of RT#121084. Thanks to Jean-Damien Durand.
	- Add missing call to va_end() following va_start() in TRACE().
	  Fixes RT#126028. Thanks to Jitka Plesnikova.
	- Added SSL_in_init() and the related functions for all
	  libraries and their versions. All return 0 or 1 as
	  documented by OpenSSL 1.1.1. Use of these functions is
	  recommended over using constants returned by get_state() and
	  state(). New constants TLS_ST_*, used by OpenSSL 1.1.0 and
	  later, will not be made available by Net::SSLeay.

1.86_04 2018-07-30